$Id: ChangeLog,v 1.52 2004/04/15 18:26:25 h_oudejans Exp $

2004-04-16 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Restructured the videocontrolpage.

2004-04-15 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed gtk segfault when catapult closes and openmsx still runs
	* fixed gtk segfault when mouse is being hold while selecting the
	   same joystickdevice in both joystick ports
	* Openmsx executable and share path are now saved when
	   closing the configuration dialog with Ok.
	* Auto Frame Skip is now hidden if not used
	* When (un)plugging devices, the mixer is only re-initiated if
	   the number of sounddevices has changed.

2004-04-12 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed gtk segfault when starting openmsx.
	* in case of openmsx crashing, leds are now turned off
	* Made the linux openmsx launch procedure in linux native code
	   (thanks to wouter). Removing wxProcess and wxExecute seems 
	   to get rid of the segfault when closing openmsx.
	* fixed wxCatapult.dsp (added winmm library for joystick checking).
	* openmsx 1211 has a new versionstring (openmsx -v). adapted 
	   catapult for it.
	* (un)plugging sounds devices now updates the mixer.

2004-04-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* joystickport devices are now prepluggable.
	* fixed UpdateComboSetting for gtk (was corrupted since the new
	   launch script).

2004-04-10 Herman Oudejans <hn.oudejans@quicknet.nl>
	* catapult displays pluggables being plugged in on openmsx.
	* catapult displays media changed in openmsx.

2004-04-09 Herman Oudejnas <hn.oudejans@quicknet.nl>
	* fixed bug: not able to use disk b, roms or tapes.

2004-04-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed windows build system. config.h is now created.
	   Unfortunately, I don't know how to set it as a dependency for
	   other files, so if it doesn't work, do a 'rebuild all'
	   - Moved dsp and dsw files to the build directory.
	   - Remove hardpaths (this means that the paths to wx includes and