@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Thu Apr 08 20:02:31 2004 -->
+<!-- generated by wxGlade 0.3.2 on Thu Apr 15 21:52:43 2004 -->
 
 <application path="../../resources/dialogs/misccontrols.xrc" name="" class="" option="0" language="XRC" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="0">
     <object class="wxPanel" name="MiscControlPage" base="EditTopLevelPanel">
@@ -47,7 +47,7 @@
                                         <option>0</option>
                                         <object class="wxStaticText" name="FrameSkipLabel" base="EditStaticText">
                                             <attribute>1</attribute>
-                                            <label>Skip Frames:</label>
+                                            <label>Max Frameskip:</label>
                                         </object>
                                     </object>
                                 </object>
